# functional_cpp

./: .gitignore  CMakeLists.txt  ex_cpp  test.cx
libs/defmacro/: .gitignore  CMakeLists.txt
libs/defmacro/src/: A.cpp
libs/defmacro/test/: CMakeLists.txt  Makefile
libs/gtest-1.7.0/: .gitignore  CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/template/: .gitignore
src/: main.cpp
